@@ -1,5 +1,5 @@
 {
-   "abstract" : "Trade stocks and ETFs with free brokerage Robinhood",
+   "abstract" : "Trade Stocks and ETFs with Free Brokerage Robinhood",
    "author" : [
       "Sanko Robinson <sanko@cpan.org>"
    ],
